@@ -4,19 +4,19 @@
 ## Paths and Settings
 #########################################################################
 
-FASTQC_PATH=/bioinfo/local/build/Centos/FastQC/FastQC_v0.11.5
-JAVA_PATH=/bioinfo/local/build/Centos/java/jre1.8.0_101/bin
-BOWTIE_PATH=/bioinfo/local/build/Centos/bowtie/bowtie-1.2/bin
-TOPHAT2_PATH=/bioinfo/local/build/Centos/tophat/tophat_2.1.1/bin
-BOWTIE2_PATH=/bioinfo/local/build/Centos/bowtie2/bowtie2-2.2.9
-STAR_PATH=/bioinfo/local/build/Centos/STAR/STAR-2.5.3a/bin/Linux_x86_64
-SAMTOOLS_PATH=/bioinfo/local/build/Centos/samtools/samtools-1.3/bin
-HTSEQ_PATH=/bioinfo/local/build/HTSeq-0.6.1/bin
-FEATURECOUNTS_PATH=/bioinfo/local/build/subread-1.5.1/bin
-BEDTOOLS_PATH=/bioinfo/local/build/Centos/bedtools/bedtools-2.25.0/bin
-R_PATH=/bioinfo/local/build/Centos/R/R-3.3.2_centos/bin
-PYTHON_PATH=/bioinfo/local/build/Centos/python/python-2.7.11/bin
-RSEQC_PATH=/bioinfo/local/build/Centos/RSeQC/RSeQC-2.6.4/scripts
+FASTQC_PATH = /bioinfo/local/build/Centos/FastQC/FastQC_v0.11.5
+JAVA_PATH = /bioinfo/local/build/Centos/java/jre1.8.0_101/bin
+BOWTIE_PATH = /bioinfo/local/build/Centos/bowtie/bowtie-1.2/bin
+TOPHAT2_PATH = /bioinfo/local/build/Centos/tophat/tophat_2.1.1/bin
+BOWTIE2_PATH = /bioinfo/local/build/Centos/bowtie2/bowtie2-2.2.9
+STAR_PATH = /bioinfo/local/build/Centos/STAR/STAR-2.5.3a/bin/Linux_x86_64
+SAMTOOLS_PATH = /bioinfo/local/build/Centos/samtools/samtools-1.3/bin
+HTSEQ_PATH = /bioinfo/local/build/Centos/python/python-2.7.13/bin
+FEATURECOUNTS_PATH = /bioinfo/local/build/Centos/subread/subread-1.5.1-Linux-x86_64/bin
+BEDTOOLS_PATH = /bioinfo/local/build/Centos/bedtools/bedtools-2.25.0/bin
+R_PATH = /bioinfo/local/build/Centos/R/R-3.3.2_centos/bin
+PYTHON_PATH = /bioinfo/local/build/Centos/python/python-2.7.11/bin
+RSEQC_PATH = /bioinfo/local/build/Centos/RSeQC/RSeQC-2.6.4/scripts
 PICARD_PATH = /bioinfo/local/build/Centos/picard/2.6.0/picard.jar
 
 #########################################################################
@@ -50,13 +50,13 @@ STRANDED = "no"
 BOWTIE_RRNA_IDX = /data/tmp/annotation_pipelines/Human/rRNA/rRNA_human_complete
 BOWTIE_OPTS = -v 2 -a -m 1 --best --strata --nomaqround -y
 
-STAR_IDX_PATH = /data/tmp/annotation_pipelines/Human/hg19/STAR_gencode_indexes/
-STAR_OPTS = --runThreadN 8 --outSAMtype BAM SortedByCoordinate --runMode alignReads --outFilterMismatchNmax 6 --outFilterMultimapNmax 20 --outSAMmultNmax 20 --outSAMprimaryFlag OneBestScore
+STAR_IDX_PATH = /data/tmp/annotation_pipelines/Human/hg19/STAR_indexes/
+STAR_OPTS = --runThreadN 8 --outSAMtype BAM SortedByCoordinate --runMode alignReads --outFilterType BySJout --outFilterMultimapNmax 20 --alignSJoverhangMin 8 --alignSJDBoverhangMin 1 --outFilterMismatchNmax 999 --outFilterMismatchNoverLmax 0.04 --alignIntronMin 20 --alignIntronMax 1000000 --alignMatesGapMax 1000000 --outSAMprimaryFlag OneBestScore --outMultimapperOrder Random
 
-TOPHAT2_IDX_PATH = /data/tmp/annotation_pipelines/Human/hg19/STAR_gencode/bowtie2_indexes/
+TOPHAT2_IDX_PATH = /data/tmp/annotation_pipelines/Human/hg19/bowtie2_indexes/hg19
 TOPHAT2_OPTS =  --b2-sensitive -p 6 -g 1 -N 2 --no-coverage-search
 
-HTSEQ_OPTS = -f bam -i gene_id -a 10 -t exon -r name 
+HTSEQ_OPTS = -f bam -t exon -r pos 
 FEATURECOUNTS_OPTS = -t exon -C -T 8 -p
 
 ########################################################################
