@@ -108,4 +108,4 @@ else
     META=$(realpath $META)
     pid=$(echo "${ABS_BIN_PATH}/makeRNAreport -i ${ODIR} -c ${CONF} -m ${META} -n ${RUNID}" | qsub -m ae -j oe -N RNApip_report -l "nodes=1:ppn=1,mem=2gb,walltime=01:00:00" -W depend=afterokarray:${jobidarray})
 fi
-echo "Job(s) submitted to the cluster !"
+echo "Job(s) [$pid] submitted to the cluster !"
