@@ -7,6 +7,12 @@ NEW FEATURES
 
 SIGNIFICANT USER-VISIBLE CHANGES
 
+   o Counts are always generated with gene_id. These IDs are then converted into gene_name regardless the countinh method
+
+   o Update STAR indexes. The GTF file is now provided within the command line, and no longer during the indexes generation
+ 
+   o Update STAR options to follow the ENCODE guidelines
+
    o Hover option of HTML report has been disable for the moment because of non-expected behavior
  
    o Configuration file has been added in the output files
